--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
+    "@mobily/ts-belt": "^4.0.0-rc.5",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.22.0",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
@@ -37,6 +38,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-svelte": "^3.3.3",
+    "pure-rand": "^7.0.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
@@ -45,9 +47,5 @@
     "vite-plugin-devtools-json": "^0.2.0",
     "vitest": "^3.2.3",
     "vitest-browser-svelte": "^0.1.0"
-  },
-  "dependencies": {
-    "@mobily/ts-belt": "^4.0.0-rc.5",
-    "pure-rand": "^7.0.1"
   }
 }
