--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,58 +3,58 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/icon-36x36.png",
+      "src": "./icon-36x36.png",
       "sizes": "36x36",
       "type": "image/png"
     },
     {
-      "src": "/icon-48x48.png",
+      "src": "./icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icon-72x72.png",
+      "src": "./icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/icon-96x96.png",
+      "src": "./icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/icon-144x144.png",
+      "src": "./icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/icon-192x192.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "name": "Board Game RNG",
-  "scope": "/",
+  "scope": ".",
   "screenshots": [
     {
-      "src": "/screenshot-585x1047.png",
+      "src": "./screenshot-585x1047.png",
       "type": "image/png",
       "sizes": "585x1047",
       "form_factor": "narrow"
     },
     {
-      "src": "/screenshot-1396x1047.png",
+      "src": "./screenshot-1396x1047.png",
       "type": "image/png",
       "sizes": "1396x1047",
       "form_factor": "wide"
     }
   ],
   "short_name": "BoardGameRNG",
-  "start_url": "/",
+  "start_url": ".",
   "theme_color": "#1c1c1f"
 }
